@@ -82,10 +82,6 @@ PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ New patches should be added at the end of the list ]
 
-  *) SSL not handling some events properly.
-   Trunk: 4ab21b9f7b933f0cd58173158ffaf6dbbaf64e51
-   Jira: https://issues.apache.org/jira/browse/TS-1338
-   +1: zwoop, bcall, jpeach, amc
 
 RELEASE PROCESS
 
