@@ -2,6 +2,8 @@
 Changes with Apache Traffic Server 3.2.1
   *) [TS-1358] Don't link libreadline with all binaries and plugins.
 
+  *) [TS-1338] SSL not handling some events properly
+
   *) [TS-1362] Allow to open cache disk without O_DIRECT, for e.g. tmpfs
    "disk" cache.
 
